--- a/app/views/inventory_items/new.html.erb
+++ b/app/views/inventory_items/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to inventory items", inventory_items_path, class: "btn btn-secondary" %>
+  <%= link_to "Back to Inventory items", inventory_items_path, class: "btn btn-secondary" %>
 </div>
